--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
 		<!-- Dependency untuk Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
