--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Dependency untuk file upload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
